--- a/views/signup.jade
+++ b/views/signup.jade
@@ -7,7 +7,7 @@ block content
 			h1 Sign Up
 			if (message.length > 0)
 				.alert #{message}
-			form.form-login(role='form', action="/signup", method="POST")
+			form.form-login(role='form', action="/signup", method="POST", onsubmit="return validateForm()")
 				.formError#usernameError
 				input.form-input#username(type='text', name="username", placeholder='Username', onblur='validateUsername("username")')
 				.formError#emailError
