--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -7,7 +7,9 @@
 
 * { box-sizing: border-box;}
 html, body { height: 100%; }
-body { font-family: $sans; background-color: $grey; margin: 0; }
+body { font-family: $sans; background-color: $grey; margin: 0; 
+    @media screen and (min-width: 700px) {width: 500px; margin: 0 auto;}
+}
 header { background-color: $primary; 
     .logo { height: 30px; width: auto;
         img { height: 100%; }
@@ -55,8 +57,8 @@ header {
 
 
 
-.container { width: 100%; min-height: 100%; margin-bottom: -50px; 
-    @media screen and (min-width: 700px) {width: 500px; margin: 0 auto;}
+.container { width: 100%; min-height: 100%; margin-bottom: -100px; 
+    @media screen and (min-width: 700px) {width: 500px; margin: 0 auto -100px auto;}
     .alert { padding-top: $pad; color: $primary; }
     .formError { font-size:0.8em; color: $primary; text-align: left; padding-top: $pad/2; }
     // opening app
@@ -90,15 +92,62 @@ header {
                 &:hover { background-color: $secondary; border: solid 2px $secondary;  }
             }
         }
+
+        
     } // end of open
 
 
+
+    //onboard
+        .hero { position: relative; top: $pad*2; display: block; text-align: center;
+            .hero-wrapper { position:relative; height: 100%; width: 100%; 
+                .hero-slider { position: relative; height: 100%; width: 100%; overflow: hidden; 
+                    li { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-position: center center; background-size: cover; background-repeat: no-repeat; background-color: $grey; @include transform(translateX(100%));
+                        .onboardMessage { width: 80%; margin: 0 auto; padding: $pad*2;
+                            @media (max-width: 450px) {padding: $pad;}
+                            .onboardText {
+                                p { padding: $pad*2 $pad; @include transform(translateZ(0));
+                                    @media (max-width: 450px) {padding: $pad/2 0;}
+                                }
+                            }
+                            .onboardImage { width: 80%; margin: 0 auto; @include transform(translateZ(0)); padding: $pad*2;
+                                @media (max-width: 450px) {width: 100%; padding: $pad/2;}
+                                img {width: 100%;}
+                            }
+                            .moveOn { @extend button; margin: $pad auto; @include border-radius(10px); padding: $pad/2 $pad; width: 80%; }
+                        }
+                    }
+                    li.selected { position: relative; @include transform(translateX(0)); }
+                    li.move-left { @include transform(translateX(-100%)); }
+                    li.is-moving, li.selected { @include transition(0.5s); }
+                    li:first-of-type { }
+                    li:nth-of-type(2) { }
+                    li:nth-of-type(3) { }
+                    li:nth-of-type(4) { }
+                }
+            }
+
+            .slider-nav { position: fixed; width: 100%; height: $pad; bottom: 50px; text-align: center;
+                @media screen and (min-width: 700px) {width: 500px; margin: 0 auto;}
+                nav { height: 100%; display: inline-block; position: relative; box-shadow: none; width: auto;
+                    ul { height: 100%; 
+                        &::after { clear: both; content: ""; display: table;}
+                        li { height: 100%; display: inline-block; width: $pad; margin: 0 $pad/2; float: left; background-color: $tertiary; @include border-radius($pad/2); border: solid 2px $tertiary; cursor: pointer; }
+                    }
+                    .marker { position: absolute; z-index: 40; bottom: 0; left: 0; margin: 0 $pad/2; width: $pad; height: $pad; background-color: $secondary; border: solid 2px darken($secondary, 10%); @include border-radius(50%); @include transition(transform 0.2s); }
+                    .item-2 { @include transform(translateX(200%)); }
+                    .item-3 { @include transform(translateX(400%)); }
+                    .item-4 { @include transform(translateX(600%)); }
+                }
+            }
+        }
 
 
 
 
     // nav display
     nav { height: 50px; width: 100%; @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); position: fixed; z-index:500; 
+        @media screen and (min-width: 700px) {width: 500px; margin: 0 auto;}
         ul { width: 100%; padding: 0px;
             li { background-color: $primary; list-style-type: none; width: 25%; height: 50px; display: inline-block; padding: 5px 0 7px 0; position: relative; 
                 &:hover, &:focus { background-color: darken($primary, 5%); }
@@ -132,15 +181,10 @@ header {
     .chatWraps { width: 100%; padding: $pad*4 0 0; text-align: center; }
     .dash {
         @extend .chatWraps;
-        .alerts {
-            .forumAlerts {
-
-            }
-            .chatAlerts {
-
-            }
-        }
     }
+
+
+        
     
 
 
@@ -191,12 +235,13 @@ header {
             }
         }
         h2 { padding: 0 0 $pad*2; }
+        .moveOn { @extend button;  margin: $pad auto $pad*4; @include border-radius(10px); padding: $pad/2 $pad; width: 80%;}
     }
 
 
 
 
-    // actual chat room
+    // chat room
     .chatRoom { padding-top: $pad*2.5;
         .chatPartner { width: 100%; text-align: center;
             .online { width: 15px; height: 15px; @include border-radius($pad/2); background-color: $tertiary; margin-right: $pad; position: relative; display: inline-block; }
@@ -306,12 +351,14 @@ header {
 
 
 
-
+    // settings
     .settingsWrap { @extend .chatWraps;
         .settingsA, .settingsN, .settingsC, .settingsP {position: relative;
             .settingsAccount, .settingsNotification, .settingsChat, .settingsPersonalize { text-align: left; background-color: white; @include box-shadow( 0px 3px 14px 0px rgba(0,0,0,0.1)); padding: $pad;
                 .setting { text-align: left; display: block; padding-top: $pad;
-                    .settingTitle { color: $secondary; display: inline-block; width: 30%; }
+                    .settingTitle { color: $secondary; display: inline-block; width: 30%;
+                        @media screen and (max-width: 450px) { width: 40%; }
+                    }
 
                     .onoffswitch { position: relative; width: 71px; -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none; display: inline-block;
                         .onoffswitch-checkbox { display: none; }
@@ -333,7 +380,9 @@ header {
                             &:focus { border: solid 2px $primary; outline: none; }
                         }
                     }
-                    .settingInput { display: inline-block; width: 69%; }
+                    .settingInput { display: inline-block; width: 69%; 
+                        @media screen and (max-width: 450px) { width: 59%; }
+                    }
                 }
                 input {}
                 form { width: 80%; margin: 0 auto;
@@ -355,8 +404,9 @@ header {
     }
 
 
-    .errorWrap {
-        @extend .chatWraps; padding-top: $pad*4; 
+
+
+    .errorWrap { @extend .chatWraps; padding-top: $pad*4;
         .error { padding: $pad* 4;
             .errorImage { width: 80%; margin: 0 auto; padding-top: $pad*4;
                 img {width: 100%;}
