--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ block content
 						.social-btn#login-go
 							img(src='/images/googleplus.png')
 				form.form-login(role='form', action="/login", method="POST")
-					input.form-input(type="text", name="email", placeholder="Email")
+					input.form-input#email(type="text", name="email", placeholder="Email")
 					input.form-input(type="password", name="password", placeholder="Password")
 					button.form-submit(type="submit") Submit
 					a.forgot(href="forgot") I forgot my password
