--- a/views/home.jade
+++ b/views/home.jade
@@ -22,14 +22,14 @@ block content
 										.onboardMessage
 											h1 Welcome to Ceda
 											.onboardText
-												p Ceda is a safe space to talk, vent and seek help. 
+												p This is a safe space to talk, vent and seek help. 
 											.onboardImage
 												img(src="/images/onboard_1.png")
 									li
 										.onboardMessage
 											h1 Forum
 											.onboardText
-												p Share your thoughts or problems on our supportive and welcoming forum.
+												p Share your thoughts on our supportive and welcoming forum.
 											.onboardImage
 												img(src="/images/onboard_2.png")
 									li
@@ -43,7 +43,7 @@ block content
 										.onboardMessage
 											h1 Ready?
 											.onboardText
-												p asdfads
+												p Let's go
 											.onboardImage
 													img(src="/images/onboard_4.png")
 							.slider-nav
