--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,16 +29,16 @@ a {
   a:hover {
     color: #213e64; }
 
-button, .container .open .social-login .social-btn, .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn, .container .chatChoiceWrap .chatChoices .chatChoice, .container .history .moveOn, .container .threadList .moveOn, .container .chatRoom .blockedAlert .popup .popup-btn, .container .errorWrap .error #retry, .logout {
+button, .container .open .social-login .social-btn, .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn, .container .chatChoiceWrap .chatChoices .chatChoice, .container .history .moveOn, .container .threadList .moveOn, .container .chatRoom .blockedAlert .popup .popup-btn, .container .errorWrap .error #retry {
   border: none;
   background-color: #ea5455;
   color: #ffffff;
   cursor: pointer;
   font-family: "Questrial", sans-serif;
   font-size: 1em; }
-  button:hover, .container .open .social-login .social-btn:hover, .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover, .container .history .moveOn:hover, .container .threadList .moveOn:hover, .container .chatRoom .blockedAlert .popup .popup-btn:hover, .container .errorWrap .error #retry:hover, .logout:hover {
+  button:hover, .container .open .social-login .social-btn:hover, .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover, .container .history .moveOn:hover, .container .threadList .moveOn:hover, .container .chatRoom .blockedAlert .popup .popup-btn:hover, .container .errorWrap .error #retry:hover {
     background-color: #213e64; }
-  button:focus, .container .open .social-login .social-btn:focus, .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus, .container .history .moveOn:focus, .container .threadList .moveOn:focus, .container .chatRoom .blockedAlert .popup .popup-btn:focus, .container .errorWrap .error #retry:focus, .logout:focus {
+  button:focus, .container .open .social-login .social-btn:focus, .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus, .container .history .moveOn:focus, .container .threadList .moveOn:focus, .container .chatRoom .blockedAlert .popup .popup-btn:focus, .container .errorWrap .error #retry:focus {
     outline: none; }
 
 .htags, h1, h2, h3 {
@@ -192,11 +192,11 @@ header {
         margin: 0 auto; }
     .container .open .notamember {
       padding-top: 60px; }
-    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .hero .hero-wrapper .hero-slider li .onboardMessage #delete.moveOn, .container .hero .hero-wrapper .hero-slider li .onboardMessage .open #deleteUser #delete.moveOn, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .history #delete.moveOn, .container .history .open #deleteUser #delete.moveOn, .container .open #deleteUser .threadList #delete.moveOn, .container .threadList .open #deleteUser #delete.moveOn, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn, .container .open #deleteUser #delete.logout {
+    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .hero .hero-wrapper .hero-slider li .onboardMessage #delete.moveOn, .container .hero .hero-wrapper .hero-slider li .onboardMessage .open #deleteUser #delete.moveOn, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .history #delete.moveOn, .container .history .open #deleteUser #delete.moveOn, .container .open #deleteUser .threadList #delete.moveOn, .container .threadList .open #deleteUser #delete.moveOn, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn {
       background-color: #ffffff;
       border: #ffffff;
       color: #ea5455; }
-      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .hero .hero-wrapper .hero-slider li .onboardMessage #delete.moveOn:hover, .container .hero .hero-wrapper .hero-slider li .onboardMessage .open #deleteUser #delete.moveOn:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover, .container .open #deleteUser .history #delete.moveOn:hover, .container .history .open #deleteUser #delete.moveOn:hover, .container .open #deleteUser .threadList #delete.moveOn:hover, .container .threadList .open #deleteUser #delete.moveOn:hover, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn:hover, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn:hover, .container .open #deleteUser #delete.logout:hover {
+      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .hero .hero-wrapper .hero-slider li .onboardMessage #delete.moveOn:hover, .container .hero .hero-wrapper .hero-slider li .onboardMessage .open #deleteUser #delete.moveOn:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover, .container .open #deleteUser .history #delete.moveOn:hover, .container .history .open #deleteUser #delete.moveOn:hover, .container .open #deleteUser .threadList #delete.moveOn:hover, .container .threadList .open #deleteUser #delete.moveOn:hover, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn:hover, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn:hover {
         color: #213e64; }
     .container .open #appeal .form-submit {
       width: 100%;
@@ -261,13 +261,12 @@ header {
                   padding: 10px 0; } }
             .container .hero .hero-wrapper .hero-slider li .onboardMessage .onboardImage {
               width: 80%;
-              margin: 0 auto;
+              margin: 20px auto;
               -webkit-transform: translateZ(0);
               -moz-transform: translateZ(0);
               -ms-transform: translateZ(0);
               -o-transform: translateZ(0);
-              transform: translateZ(0);
-              padding: 40px; }
+              transform: translateZ(0); }
               @media (max-width: 450px) {
                 .container .hero .hero-wrapper .hero-slider li .onboardMessage .onboardImage {
                   width: 100%;
@@ -328,7 +327,7 @@ header {
             width: 20px;
             margin: 0 10px;
             float: left;
-            background-color: #6ed4b3;
+            background-color: #ffffff;
             -webkit-border-radius: 10px;
             -moz-border-radius: 10px;
             -ms-border-radius: 10px;
@@ -556,7 +555,8 @@ header {
       -ms-border-radius: 10px;
       border-radius: 10px;
       padding: 10px 20px;
-      width: 80%; }
+      width: 80%;
+      max-width: 300px; }
   .container .chatRoom {
     padding-top: 50px; }
     .container .chatRoom .chatPartner {
@@ -1018,21 +1018,12 @@ header {
 .logout {
   position: relative;
   margin: 50px 20px 20px 0;
-  border: solid 2px #ea5455;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  border-radius: 5px;
-  padding: 5px 20px;
-  max-width: 140px;
   float: right;
-  text-align: center;
-  width: 40%; }
-  .logout:hover {
-    background-color: #213e64;
-    border: solid 2px #213e64; }
+  text-align: center; }
   .logout a {
-    color: #ffffff;
+    color: #213e64;
     text-align: center; }
+    .logout a:hover {
+      color: #ea5455; }
 
 /*# sourceMappingURL=styles.css.map */
