--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -91,16 +91,18 @@ form {
     font-size: 1em;
     padding: 5px;
     margin: 5px auto;
-    border: solid 2px #ea5455;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     border-radius: 5px; }
-  form .form-input:focus {
-    border: solid 2px #213e64;
-    outline: none; }
+  form .form-input {
+    border: solid 2px #213e64; }
+    form .form-input:focus {
+      border: solid 2px #ea5455;
+      outline: none; }
   form .form-submit {
-    color: #ffffff; }
+    color: #ffffff;
+    border: solid 2px #ea5455; }
     form .form-submit:hover {
       background-color: #213e64;
       border: solid 2px #213e64; }
@@ -192,6 +194,9 @@ header {
         margin: 0 auto; }
     .container .open .notamember {
       padding-top: 60px; }
+      @media screen and (max-width: 450px) {
+        .container .open .notamember {
+          padding-top: 40px; } }
     .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .hero .hero-wrapper .hero-slider li .onboardMessage #delete.moveOn, .container .hero .hero-wrapper .hero-slider li .onboardMessage .open #deleteUser #delete.moveOn, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .history #delete.moveOn, .container .history .open #deleteUser #delete.moveOn, .container .open #deleteUser .threadList #delete.moveOn, .container .threadList .open #deleteUser #delete.moveOn, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn {
       background-color: #ffffff;
       border: #ffffff;
@@ -309,6 +314,9 @@ header {
         .container .hero .slider-nav {
           width: 500px;
           margin: 0 auto; } }
+      @media (max-width: 450px) {
+        .container .hero .slider-nav {
+          bottom: 20px; } }
       .container .hero .slider-nav nav {
         height: 100%;
         display: inline-block;
