--- a/public/scss/vars.scss
+++ b/public/scss/vars.scss
@@ -1,8 +1,9 @@
 $primary: #ea5455;
 $secondary: #213e64;
-$tertiary: #6ed4b3;
+$tertiary: #5dc4be;
 $white: #ffffff;
 $grey: #ebebeb;
+$darkgrey: #616161;
 $black: #000000;
 
 $sans: 'Questrial', sans-serif;
