--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,16 +29,16 @@ a {
   a:hover {
     color: #213e64; }
 
-button, .container .open .social-login .social-btn, .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn, .container .chatChoiceWrap .chatChoices .chatChoice, .container .history .moveOn, .container .threadList .moveOn, .container .chatRoom .blockedAlert .popup .popup-btn, .container .errorWrap .error #retry {
+button, .container .open .social-login .social-btn, .container .chatChoiceWrap .chatChoices .chatChoice, .container .chatRoom .blockedAlert .popup .popup-btn, .container .errorWrap .error #retry {
   border: none;
   background-color: #ea5455;
   color: #ffffff;
   cursor: pointer;
   font-family: "Questrial", sans-serif;
   font-size: 1em; }
-  button:hover, .container .open .social-login .social-btn:hover, .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover, .container .history .moveOn:hover, .container .threadList .moveOn:hover, .container .chatRoom .blockedAlert .popup .popup-btn:hover, .container .errorWrap .error #retry:hover {
+  button:hover, .container .open .social-login .social-btn:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover, .container .chatRoom .blockedAlert .popup .popup-btn:hover, .container .errorWrap .error #retry:hover {
     background-color: #213e64; }
-  button:focus, .container .open .social-login .social-btn:focus, .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus, .container .history .moveOn:focus, .container .threadList .moveOn:focus, .container .chatRoom .blockedAlert .popup .popup-btn:focus, .container .errorWrap .error #retry:focus {
+  button:focus, .container .open .social-login .social-btn:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus, .container .chatRoom .blockedAlert .popup .popup-btn:focus, .container .errorWrap .error #retry:focus {
     outline: none; }
 
 .htags, h1, h2, h3 {
@@ -197,11 +197,11 @@ header {
       @media screen and (max-width: 450px) {
         .container .open .notamember {
           padding-top: 40px; } }
-    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .hero .hero-wrapper .hero-slider li .onboardMessage #delete.moveOn, .container .hero .hero-wrapper .hero-slider li .onboardMessage .open #deleteUser #delete.moveOn, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .history #delete.moveOn, .container .history .open #deleteUser #delete.moveOn, .container .open #deleteUser .threadList #delete.moveOn, .container .threadList .open #deleteUser #delete.moveOn, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn {
+    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn {
       background-color: #ffffff;
       border: #ffffff;
       color: #ea5455; }
-      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .hero .hero-wrapper .hero-slider li .onboardMessage #delete.moveOn:hover, .container .hero .hero-wrapper .hero-slider li .onboardMessage .open #deleteUser #delete.moveOn:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover, .container .open #deleteUser .history #delete.moveOn:hover, .container .history .open #deleteUser #delete.moveOn:hover, .container .open #deleteUser .threadList #delete.moveOn:hover, .container .threadList .open #deleteUser #delete.moveOn:hover, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn:hover, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn:hover {
+      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn:hover, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn:hover {
         color: #213e64; }
     .container .open #appeal .form-submit {
       width: 100%;
@@ -278,14 +278,6 @@ header {
                   padding: 10px; } }
               .container .hero .hero-wrapper .hero-slider li .onboardMessage .onboardImage img {
                 width: 100%; }
-            .container .hero .hero-wrapper .hero-slider li .onboardMessage .moveOn {
-              margin: 20px auto;
-              -webkit-border-radius: 10px;
-              -moz-border-radius: 10px;
-              -ms-border-radius: 10px;
-              border-radius: 10px;
-              padding: 10px 20px;
-              width: 80%; }
         .container .hero .hero-wrapper .hero-slider li.selected {
           position: relative;
           -webkit-transform: translateX(0);
@@ -340,7 +332,7 @@ header {
             -moz-border-radius: 10px;
             -ms-border-radius: 10px;
             border-radius: 10px;
-            border: solid 2px #6ed4b3;
+            border: solid 2px #5dc4be;
             cursor: pointer; }
         .container .hero .slider-nav nav .marker {
           position: absolute;
@@ -452,6 +444,26 @@ header {
     width: 100%;
     padding: 80px 0 0;
     text-align: center; }
+  .container .dash .emptyHistory {
+    margin: 0 auto 20px;
+    padding: 40px;
+    width: 80%; }
+    .container .dash .emptyHistory p {
+      margin: 0 auto 40px;
+      padding: 20px; }
+    .container .dash .emptyHistory .emptyImage {
+      width: 80%;
+      margin: 20px auto;
+      -webkit-transform: translateZ(0);
+      -moz-transform: translateZ(0);
+      -ms-transform: translateZ(0);
+      -o-transform: translateZ(0);
+      transform: translateZ(0); }
+      @media (max-width: 450px) {
+        .container .dash .emptyHistory .emptyImage {
+          width: 100%; } }
+      .container .dash .emptyHistory .emptyImage img {
+        width: 100%; }
   .container .chatChoiceWrap .chatChoices {
     padding: 40px 0; }
     .container .chatChoiceWrap .chatChoices .chatChoice {
@@ -475,10 +487,10 @@ header {
         width: 100%;
         position: relative; }
         .container .history ul li ul, .container .history ul li .postItem, .container .threadList ul li ul, .container .threadList ul li .postItem {
-          width: 90%;
+          width: 100%;
           padding: 0 40px 10px;
           margin: 0 auto;
-          color: #213e64;
+          color: #616161;
           text-align: left; }
           @media screen and (max-width: 450px) {
             .container .history ul li ul, .container .history ul li .postItem, .container .threadList ul li ul, .container .threadList ul li .postItem {
@@ -490,7 +502,8 @@ header {
             font-size: 0.8em;
             padding: 20px 0 10px;
             width: 50%;
-            display: inline-block; }
+            display: inline-block;
+            color: #5dc4be; }
             @media screen and (max-width: 500px) {
               .container .history ul li ul .middle-left, .container .history ul li .postItem .middle-left, .container .threadList ul li ul .middle-left, .container .threadList ul li .postItem .middle-left {
                 font-size: 0.7em; } }
@@ -506,7 +519,8 @@ header {
             font-size: 0.8em;
             width: 50%;
             display: inline-block;
-            text-align: right; }
+            text-align: right;
+            color: #5dc4be; }
             @media screen and (max-width: 500px) {
               .container .history ul li ul .middle-right, .container .history ul li .postItem .middle-right, .container .threadList ul li ul .middle-right, .container .threadList ul li .postItem .middle-right {
                 font-size: 0.7em; } }
@@ -519,7 +533,8 @@ header {
             font-size: 0.8em;
             padding: 10px 0;
             width: 50%;
-            display: inline-block; }
+            display: inline-block;
+            color: #5dc4be; }
             @media screen and (max-width: 500px) {
               .container .history ul li ul .bottom-left, .container .history ul li .postItem .bottom-left, .container .threadList ul li ul .bottom-left, .container .threadList ul li .postItem .bottom-left {
                 font-size: 0.7em; } }
@@ -528,7 +543,8 @@ header {
             width: 50%;
             text-align: right;
             padding: 10px 5px;
-            display: inline-block; }
+            display: inline-block;
+            color: #5dc4be; }
             @media screen and (max-width: 500px) {
               .container .history ul li ul .bottom-right, .container .history ul li .postItem .bottom-right, .container .threadList ul li ul .bottom-right, .container .threadList ul li .postItem .bottom-right {
                 font-size: 0.7em; } }
@@ -556,15 +572,6 @@ header {
           border-bottom: solid 1px #d2d2d2; }
     .container .history h2, .container .threadList h2 {
       padding: 0 0 40px; }
-    .container .history .moveOn, .container .threadList .moveOn {
-      margin: 20px auto 80px;
-      -webkit-border-radius: 10px;
-      -moz-border-radius: 10px;
-      -ms-border-radius: 10px;
-      border-radius: 10px;
-      padding: 10px 20px;
-      width: 80%;
-      max-width: 300px; }
   .container .chatRoom {
     padding-top: 50px; }
     .container .chatRoom .chatPartner {
@@ -577,7 +584,7 @@ header {
         -moz-border-radius: 10px;
         -ms-border-radius: 10px;
         border-radius: 10px;
-        background-color: #6ed4b3;
+        background-color: #5dc4be;
         margin-right: 20px;
         position: relative;
         display: inline-block; }
@@ -818,7 +825,7 @@ header {
     bottom: 0px;
     right: 0px; }
     .container .forumWrap .addPost a .add {
-      width: 50px;
+      width: 70px;
       height: auto;
       position: fixed;
       bottom: 20px;
@@ -842,7 +849,7 @@ header {
       -moz-border-radius: 30px;
       -ms-border-radius: 30px;
       border-radius: 30px;
-      background-color: #6ed4b3;
+      background-color: #5dc4be;
       cursor: pointer;
       -webkit-box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.1);
       -moz-box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.1);
