temp hidden webrtc

--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -89,5 +89,5 @@ block content
 						a(href='/chat/blockuser?id=#{userIDs[1]}')
 							.chat-btn#chat-btn-block
 								img(src='/images/icon-block.png')
-	script(src='/js/simplewebrtc.js')
+	//-script(src='/js/simplewebrtc.js')
 	script(src='/js/client.js')
