--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -719,6 +719,7 @@ header {
         border: none;
         padding: 10px 20px;
         font-family: "Questrial", sans-serif;
+        font-size: 1em;
         -webkit-box-shadow: 0px -5px 14px -5px rgba(0, 0, 0, 0.2);
         -moz-box-shadow: 0px -5px 14px -5px rgba(0, 0, 0, 0.2);
         -ms-box-shadow: 0px -5px 14px -5px rgba(0, 0, 0, 0.2);
@@ -752,7 +753,6 @@ header {
       display: none;
       width: 100%;
       height: 100%;
-      padding-top: 40px;
       background-color: #000000;
       position: fixed; }
       .container .chatRoom .videoWrap #remotes {
@@ -761,7 +761,7 @@ header {
         .container .chatRoom .videoWrap #remotes .videoDisplay {
           position: relative;
           text-align: center;
-          margin-top: 100px; }
+          margin-top: 60px; }
           .container .chatRoom .videoWrap #remotes .videoDisplay video {
             top: 0;
             left: 0;
@@ -772,8 +772,8 @@ header {
             margin: 0 auto;
             width: 92%; }
       .container .chatRoom .videoWrap .localDisplay {
-        width: 200px;
-        height: 150px;
+        width: 150px;
+        height: 120px;
         position: fixed;
         bottom: 60px;
         right: 0px;
