--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -414,8 +414,8 @@ header {
 
 
 
-    .errorWrap { @extend .chatWraps; padding-top: $pad*4;
-        .error { padding: $pad* 4;
+    .errorWrap { @extend .chatWraps; padding-top: $pad;
+        .error { padding: $pad*4 $pad*2 $pad/2;
             .errorImage { width: 80%; margin: 0 auto; padding-top: $pad*4;
                 img {width: 100%;}
             }
